# src/main/resources/api-definition.yaml
@@ -3414,6 +3414,64 @@ traits:
         responses:
           204:
             description: sub draft deleted.
+    /proofsOfDeliveryWithLocation/{id}:
+      displayName: Proof Of Delivery - Sub Draft With Location Detail
+      uriParameters:
+        id:
+          displayName: proofOfDeliveryId
+          type: string
+          required: true
+          repeat: false
+      get:
+        is: [ secured ]
+        description: Get proof of delivery sub draft with location detail
+        responses:
+          200:
+            body:
+              application/json:
+                schema: proofOfDeliveryDto
+          400:
+            body:
+              application/json:
+                schema: badRequestResponse
+          404:
+          403:
+            body:
+              application/json:
+                schema: localizedMessage
+    /proofsOfDeliveryWithLocation/{id}/subDraft/{subDraftId}:
+      displayName: Proof Of Delivery - Sub Draft Detail
+      uriParameters:
+        id:
+          displayName: proofOfDeliveryId
+          type: string
+          required: true
+          repeat: false
+        subDraftId:
+          displayName: subDraftId
+          type: string
+          required: true
+          repeat: false
+      delete:
+        is: [ secured ]
+        description: Delete proof of delivery sub draft with location
+        responses:
+          204:
+            description: Sub draft with location deleted.
+    /proofsOfDeliveryWithLocation/{subDraftId}:
+      displayName: Proof Of Delivery - Sub Draft Detail
+      uriParameters:
+        subDraftId:
+          displayName: subDraftId
+          type: string
+          required: true
+          repeat: false
+      put:
+        is: [ secured ]
+        description: Update or submit sub draft with location
+        responses:
+          204:
+            description: Sub draft updated or submitted
     /integration:
       /stockMovements:
         displayName: Get Stock Movements
